web-infras/parser/tests/fixtures/esprima/ES6/yield/invalid-yield-generator-expression-rest/output.txt
[SyntaxError]: 'yield' is only allowed within generator functions. (1,19)
1|(function *(x, ...yield){})
 |                 ^
